--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,7 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
-      uses: actions/setup-dotnet@v2
+      #uses: actions/setup-dotnet@v2
+      uses: microsoft/setup-msbuild@v1.1
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
