--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,8 +19,8 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      #run: dotnet restore
-      run: msbuild restore NewBilet.sln -t:restore -p:RestorePackagesConfig=true
+      run: dotnet restore
+      #run: msbuild restore NewBilet.sln -t:restore -p:RestorePackagesConfig=true
     - name: Build
       #run: dotnet build --no-restore
       run: msbuild NewBilet/NewBilet.csproj -t:rebuild -verbosity:diag -property:Configuration=Release
