--- a/NewBilet/NewBilet.csproj
+++ b/NewBilet/NewBilet.csproj
@@ -89,6 +89,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LiczCene.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
